# lordonator

./: README.md  lordonator.cabal
app/: Main.hs
src/Lordonator/: Cleaner.hs  Generator.hs  Model.hs
