name:                lordonator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lordonator#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-files:          lordon.txt
data-dir:            data

library
  hs-source-dirs:      src
  exposed-modules:     Lordonator.Model
                     , Lordonator.Generator
                     , Lordonator.Cleaner
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , MonadRandom >= 0.5
                     , monad-extras >= 0.6
                     , mtl >= 2.2
                     , text >= 1.2
                     , pipes >= 4.3
                     , split >= 0.2
  default-language:    Haskell2010

executable lordonator
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lordonator
                     , text >= 1.2
                     , optparse-applicative >= 0.13
                     , containers >= 0.5
  default-language:    Haskell2010

test-suite lordonator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lordonator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Raveline/lordonator
